Update Weekly Project 27 Lokesh.ipynb
Completed Q and A

--- a/Weekly Project 27/Weekly Project 27 Lokesh.ipynb
+++ b/Weekly Project 27/Weekly Project 27 Lokesh.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "4  Comm&Mgmt     No     96.8        Mkt&Fin  55.50      Placed  425000.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "max    940000.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -479,12 +479,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Distribution of Placed and Unplaced as per caterory"
+    "## Distribution of Placed and Unplaced as per categorial feature"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -581,8 +581,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distribution of Placed and Unplaced as per numerical feature"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +869,7 @@
        "max    940000.000000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +977,7 @@
        "freq       148  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1167,7 +1175,7 @@
        "max       NaN  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1178,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1283,7 @@
        "freq            67  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,12 +1307,12 @@
    "source": [
     "## SSC Percentage\n",
     "\n",
-    "**Conclusion** :- Eligibility Criteria for scc percentage is  49% and above to get placement"
+    "**Conclusion** :- Eligibility Criteria for scc percentage is above 49% to get placement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1321,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1343,12 +1351,12 @@
    "source": [
     "## HSC Percentage\n",
     "\n",
-    "**Conclusion** :- Eligibility Criteria for hsc percentage is 50.83% and above to get placement"
+    "**Conclusion** :- Eligibility Criteria for hsc percentage above 50.83% to get placement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1365,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1387,12 +1395,12 @@
    "source": [
     "## Degree Percentage\n",
     "\n",
-    "**Conclusion** :- Eligibility Criteria for Degree percentage is 56% and above to get placement"
+    "**Conclusion** :- Eligibility Criteria for Degree percentage above 56% to get placement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1409,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1436,7 +1444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1453,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1475,12 +1483,12 @@
    "source": [
     "## MBA Percentage\n",
     "\n",
-    "**Conclusion** :- Eligibility Criteria for MBA percentage is 52.38% and above to get placement"
+    "**Conclusion** :- Eligibility Criteria for MBA percentage above 52.38% to get placement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1497,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1532,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1549,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1576,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1593,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1620,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1637,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1664,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1681,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1708,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1717,7 +1725,7 @@
        "<AxesSubplot:xlabel='status', ylabel='Count'>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1738,6 +1746,56 @@
     "merit = df[df[\"mba_p\"] > 75.71]\n",
     "\n",
     "sns.histplot(merit[\"status\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Q & A"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which factor influenced a candidate in getting placed?\n",
+    "\n",
+    "* Candidate with **work experience** have higher chance of getting placed\n",
+    "* Candidate pursuing **hsc subject in Commerce and Science** have chance of getting placed\n",
+    "* Candidate pursuing **degree in Commerce and Management** have higher chance of getting  placed\n",
+    "* Candidate pursuing **Specialisation in Market & finance** have higher chance of getting  placed"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Does percentage matters for one to get placed?\n",
+    "\n",
+    "Yes percentage matter for getting placed Here is quick table given below\n",
+    "\n",
+    "| Feature  | Eligibility Criteria | Merit Score Guarentee Placed |\n",
+    "|----------|----------------------|------------------------------|\n",
+    "| ssc_p    | Above 49 %           | Above 77.8 %                 |\n",
+    "| hsc_p    | Above 50.83 %        | Above 82 %                   |\n",
+    "| degree_p | Above 56 %           | Above 79 %                   |\n",
+    "| etest_p  | Not Criteria         | Above 97 %                   |\n",
+    "| mba_p    | Above 52.38 %        | Above 75.71 %                |"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Which degree specialization in much demanded by corporate?\n",
+    "\n",
+    "1. Commerce and Management\n",
+    "2. Market & Finance"
    ]
   }
  ],
